# Inventory

./: .gitignore  CMakeLists.txt  a.out  build.sh  communication.cpp  communication.h  database.cpp  database.db  database.h  main.cpp
